--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
+    "angular-highcharts": "^15.0.1",
+    "aos": "^2.3.4",
+    "chart.js": "^2.9.4",
+    "font-awesome": "^4.7.0",
+    "highcharts": "^11.1.0",
+    "ngx-typed-js": "^2.1.1",
     "rxjs": "~7.8.0",
+    "scrollmagic": "^2.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -26,6 +34,8 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/aos": "^3.0.4",
+    "@types/chart.js": "^2.9.37",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
